@@ -8,6 +8,7 @@ Legend:
 
 On This Branch
 ==============
+[B] crofsock: send_from_queue gets into CPU spin due to out-of-synchronization pending packet count
 [B] crofsock: send_from_queue gets into CPU spin if last send in queue fragments.
 [B] cofaction: (~ line 1980) zero buffer on set_field as OpenVSwitch checks for zero padding.
 
